--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>idenminer.com</title>
     </head>
     <body>
-        
 
+        <img src="logo.png" alt="School Logo">
         <form action="">
             <textarea name="IdeInput" id="ideinput" rows="15" cols="100"></textarea>
             <br>
