--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <br>
             <input type="button" name="button" value="Send" id="ideinput">
         </form>
+        <div class="whitebox">    
+        </div>
         
     </body>
 </html>
