--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
         <title>idenminer.com</title>
     </head>
     <body>
-
-        <img src="logo.png" alt="School Logo">
+        
+        <img src="logo.png" alt="Logo">
         <form action="">
             <textarea name="IdeInput" id="ideinput" rows="15" cols="100"></textarea>
             <br>
             <input type="button" name="button" value="Send" id="ideinput">
         </form>
-        <div class="whitebox">    
-        </div>
-        
+        <p class="big">Elevråds Postkasse</p>
     </body>
 </html>
