--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>idenminer.com</title>
     </head>
     <body>
-        
+        <script>0</script>
         <img src="logo.png" alt="Logo">
         <form action="">
             <textarea name="IdeInput" id="ideinput" rows="15" cols="100"></textarea>
