--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <form action="">
             <textarea name="IdeInput" id="ideinput" rows="15" cols="100"></textarea>
             <br>
-            <input type="button" name="button" value="Send" id="buttoninput">
+            <input type="button" name="button" value="Send" id="ideainput">
         </form>
         <p class="big">Elevråds Postkasse</p>
     </body>
