updated index html to hopefully display alert

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <form action="">
             <textarea name="IdeInput" id="ideinput" rows="15" cols="100"></textarea>
             <br>
-            <input type="button" name="button" value="Send" id="ideainput1" onclick="save_as_file1()">
+            <button type="button" name="button" value="Send" id="ideainput1" onclick="save_as_file1()" ></button> 
         </form>
         <p class="big">Elevråds Postkasse</p>
     </body>
