changed js code

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
         </form>
         <p class="big">Elevråds Postkasse</p>
-        <script src="script.js" type="text/javascript"></script>
+        <script src="submission-system/script.js" type="text/javascript"></script>
         <link rel="stylesheet" href="style.css">
     </body>
 </html>
